src/objects/OrderParams__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Accountid__c</fullName>
        <label>Accountid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <label>Advertiser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerName__c</fullName>
        <label>CallerName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerPhone__c</fullName>
        <label>CallerPhone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationURL__c</fullName>
        <label>ConfirmationURL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PONumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedCustomers__c</fullName>
        <label>RelatedCustomers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>OrderParams</label>
</CustomObject>